# robotverseny_gazebo24

./: README.md
robotverseny_application/: CMakeLists.txt  package.xml
robotverseny_bringup/: CMakeLists.txt  package.xml
robotverseny_bringup/config/: diff_drive.rviz  robotverseny.rviz  robotverseny_bridge.yaml  ros_gz_example_bridge.yaml
robotverseny_bringup/launch/: roboworks.launch.py  roboworks_sim_only.py
robotverseny_bringup/src/: path_and_steering.cpp
robotverseny_description/: CMakeLists.txt  package.xml
robotverseny_description/models/diff_drive/: model.config
robotverseny_description/models/roboworks/: model.config  model.sdf  model.urdf
robotverseny_description/models/roboworks/meshes/: T1_R.mtl  T2_R.mtl  lidar.dae  tire.dae  track_road.dae  track_stripes.dae  track_walls.dae
robotverseny_gazebo/: CMakeLists.txt  package.xml
robotverseny_gazebo/include/robotverseny_gazebo/: BasicSystem.hh  FullSystem.hh
robotverseny_gazebo/src/: BasicSystem.cc  FullSystem.cc
robotverseny_gazebo/worlds/: roboworks.sdf
robotverseny_gazebo/worlds/meshes/: trackWalls.dae  wheel.dae
