<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>robotverseny_gazebo</name>
  <version>0.0.0</version>
  <description>Gazebo-specific implementations for the ros_gz_example project</description>
  <maintainer email="michael@openrobotics.org">Michael Carroll</maintainer>
  <license>Apache 2.0</license>
  <author>Michael Carroll</author>
  <author>Dharini Dutia</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>robotverseny_description</depend>
  <build_depend>tf2_geometry_msgs</build_depend>

  <test_depend>ament_lint_auto</test_depend>
  <exec_depend>tf2_geometry_msgs</exec_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>

